* fix overflow of long text.

--- a/src/web/scss/app.scss
+++ b/src/web/scss/app.scss
@@ -101,7 +101,8 @@ $sidebar-width: 18rem;
   #app-layout.sidebar-overlay #layout-sidebar {
     margin-top: 0;
     height: 100%;
-    min-width: $sidebar-width;
+    //min-width: $sidebar-width;
+    //max-width: calc(100vw - 1rem);
     width: auto;
     box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.3);
     position: fixed;
